<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.mdmi</groupId>
	<artifactId>org.mdmi.pom</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>MDMI Eclipse Plugin Parent POM</name>
	<description>MDMI Eclipse Plugin Parent POM</description>

	<properties>
		<tycho-version>2.7.5</tycho-version>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>2022-09</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/2022-09</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
				</configuration>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>org.mdmi.ecore</module>
		<module>org.mdmi.core.runtime</module>
	</modules>
	<profiles>
 
		<profile>
			<id>mdmiartifactory</id>
			<distributionManagement>

				<repository>
					<id>mdix</id>
					<name>a0rydvwuacqh2-artifactory-primary-0-releases</name>
					<url>https://mdix.jfrog.io/artifactory/mdmiartifactory</url>
				</repository>
				<snapshotRepository>
					<id>mdix</id>
					<name>a0rydvwuacqh2-artifactory-primary-0-snapshots</name>
					<url>https://mdix.jfrog.io/artifactory/mdmiartifactory</url>
				</snapshotRepository>


			</distributionManagement>

		</profile>
		<profile>
			<id>dependencycheck</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>7.3.2</version>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

</project>
